# throughline-

./: .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
scripts/: entrypoint.sh
src/throughline/: __init__.py  __main__.py  config.py  events.py  exceptions.py
src/throughline/cli/: bootstrap.py  main.py
src/throughline/db/: __init__.py  models.py  session.py
src/throughline/http_app/: app.py
src/throughline/mcp_server/: agent.py  context.py  human.py  resources.py  serialization.py
src/throughline/render/: active_context_md.py  atomic.py  state_md.py  worker.py
src/throughline/services/: _audit.py  decisions.py  discoveries.py  log.py  packages.py  state_sections.py
tests/: conftest.py
tests/integration/: _jsonrpc.py  test_bootstrap.py  test_decision_discovery.py  test_full_cycle.py  test_handshake.py  test_resilience.py
tests/unit/: test_db_init.py  test_decisions_service.py  test_discoveries_service.py  test_log_service.py  test_packages_service.py  test_render.py  test_state_sections_service.py
