[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "throughline"
version = "0.1.0"
description = "MCP server: state bus and harness orchestrator for Claude Desktop ↔ Claude Code"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "jucelino"}]
license = {text = "MIT"}
dependencies = [
    "mcp==1.27.0",
    "starlette>=1.0.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0.49,<3.0",
    "aiosqlite>=0.22.1,<1.0",
    "pydantic>=2.13.0,<3.0",
    "pydantic-settings>=2.14.0,<3.0",
    "typer>=0.25.0,<1.0",
    "watchfiles>=1.1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "httpx>=0.28.0,<1.0",
    "asgi-lifespan>=2.1.0,<3.0",
]

[project.scripts]
throughline = "throughline.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/throughline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
